@@ -32,6 +32,7 @@ Improvements::
 
 Bug Fixes::
 
+* resolve remote image in document title or section title with autogenerated ID
 * don't add chapter signifier if `chapter-signifier` is unset (#2328)
 * don't add part signifier if `part-signifier` is unset (#2328)
 * keep caret between items in menu macro with previous item if items wrap
